# AI_Voice-Agent

./: .gitignore  Dockerfile  generic_agent.py  livekit.toml  main.py  pyproject.toml  rag.py  requirements.txt  token_api.py
agent/: Dockerfile  livekit.toml  main.py  pyproject.toml  rag.py  requirements.txt
token-server/: requirements.txt  token_api.py
